--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ h2::after{
         <div id="screen_0" class="screen visible">
             <h2>KEEP CALM AND HAPPY</h2>
             <p>Scientific evidence suggests that being happy may have major benefits for your health. For starters, being happy promotes a healthy lifestyle. It may also help combat stress, boost your immune system, protect your heart and reduce pain. What's more, it may even increase your life expectancy</p>
-            <div class="image" style="background-image: url(https://thumbs.dreamstime.com/b/happy-kids-jumping-together-sunny-day-vector-illustration-92870793.jpg);">
+            <div class="image" style="background-image: url(https://www.mcri.edu.au/images/news/istock_000040965646_large_-_copy_0.jpg);">
 
             </div>
         </div>
