--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ h2::after{
         </div>
       
         <div id="screen_3" class="screen visible">
-            <h2>BEAUTIFUL PLACES</h2>
+            <h2>BEAUTIFUL DESTINATIONS</h2>
             <p>Travel provides a fantastic opportunity for you to learn many new things. Yes, you gain knowledge from travel guides, and you may be able to visualize what you are reading about but nothing compares to actually feeling the sun on your face or the snow in your hair. When you experience standing on the soil, looking at the things of those you read about, the experience is exhilarating and irreplaceable.</p>
             <div class="image" style="background-image: url(https://www.jetsetter.com//uploads/sites/7/2018/04/s0i_qgfG.jpeg);">
 
